--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -3,3 +3,23 @@ flex-direction: row;}
 .main{ width: 100%;display: flex;
     flex-direction: column;
 align-items: center;}
+
+.post-form-container{
+    border: none;
+    background: #fdeeee;
+    min-width: 690px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 20px;}
+
+
+
+textarea {
+    width: 500px;
+    height: 100px;
+    padding: 14px 20px;
+    margin: 0;
+    font-size: 1.2rem;
+    border-radius: 20px;
+    resize: none;}
