--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,9 @@
   border: none;
   text-decoration: none;
 }
-
+a{text-decoration: none;color: black;}
 body {
+  background-color: steelblue;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
