--- a/frontend/src/components/Post/Card.css
+++ b/frontend/src/components/Post/Card.css
@@ -1,76 +1,140 @@
-.card-container , .comments-container{border: 3px solid indianred;border-radius: 20px; margin: 20px; background: #fdeeee;}
-.comments-container{background: white;}
+.card-container,
+.comments-container {
+  border: 3px solid indianred;
+  border-radius: 20px;
+  margin: 20px;
+  background: #fdeeee;
+}
+.comments-container {
+  background: white;
+}
 
-.user_date{ display: flex; align-items: center;justify-content: space-between;   }
-.user_date p { margin: 10px 20px;font-size: 14px;font-style: italic;}
-.content_attachment{
-    display: flex;flex-direction: column; justify-content: center; align-items: center;
+.user_date {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.btn-img{
-    height:25px; margin-left: 10px; transition: 0.5s ease-in-out;cursor: pointer;
+.user_date p {
+  margin: 10px 20px;
+  font-size: 14px;
+  font-style: italic;
 }
-.btn-img:hover{background: #ffd0c4; padding: 10px; border-radius: 5px;height: 50px;}
-.button{
-    margin:10px 20px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    cursor:default;
+.content_attachment {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.content{ width: 80%;text-align: center;}
-.button-container{display: flex;flex-direction: row; }
+.btn-img {
+  height: 25px;
+  margin-left: 10px;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+.btn-img:hover {
+  background: #ffd0c4;
+  padding: 10px;
+  border-radius: 5px;
+  height: 50px;
+}
+.button {
+  margin: 10px 20px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  cursor: default;
+}
+.content {
+  width: 80%;
+  text-align: center;
+}
+.button-container {
+  display: flex;
+  flex-direction: row;
+}
 
-form{
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 20px;
+  border-radius: 20px;
+}
+
+.textcomment {
+  background: white;
+}
+
+.edit-comment {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+.content {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.edit-comment-form {
+  display: flex;
+}
+.label-edit {
+  padding: 10px 20px;
+  padding-bottom: 14px;
+  font-size: 1.2rem;
+  border-radius: 20px;
+  margin-right: 5px;
+
+  background: #ffd0c4;
+  font-style: oblique;
+}
+
+.edit {
+  margin-top: 10px;
+  background: #ffd0c4;
+  cursor: pointer;
+  font-size: 1.2rem;
+  padding: 14px 20px;
+  margin: 0;
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 560px) {
+  .textcomment {
+    width: 200px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .textcomment {
+    width: 150px;
+    font-size: 0.68rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .textcomment {
+    width: 150px;
+    font-size: 0.68rem;
+  }
+  .label-edit {
+    height: 40px;
+    font-size: 0.8rem;
+    margin-top: 10px;
+  }
+  .submit-edit {
+    height: 40px;
+    font-size: 0.8rem;
+  }
+  .edit-btn {
     display: flex;
     flex-direction: column;
-    align-items: center;
-
-    margin: 20px;
-    border-radius: 20px;
+  }
+  .edit-comment {
+    width: 100px;
+  }
 }
-
-.textcomment{
-    background: white;
-}
-
-
-.edit-comment{ display: flex; flex-direction: row; justify-content: flex-end; margin-right: 20px;margin-bottom: 10px;}
-
-.content{font-size:20px;margin-bottom: 10px;}
-
-.edit-comment-form{
-    display: flex;
-   
-}
-.label-edit{
-    padding: 10px 20px;
-    padding-bottom: 14px;
-    font-size: 1.2rem;
-    border-radius: 20px;
-    margin-right: 5px;
-   
-background:#ffd0c4;
-font-style: oblique;}
-
-.edit{margin-top: 10px;
-    background: #ffd0c4;
-    cursor: pointer; font-size: 1.2rem;
-    padding: 14px 20px;
-    margin: 0;
-    border-radius: 20px;}
-
-@media screen and (max-width :560px) { 
-   .textcomment{width:200px}
-}
-@media screen and (max-width :450px) { 
-    .textcomment{width:150px; font-size: 0.68rem;}
- }
-
- @media screen and (max-width :450px) { 
-    .textcomment{width:150px; font-size: 0.68rem;}
-    .label-edit{ height: 40px; font-size: 0.8rem;margin-top: 10px;}
-    .submit-edit{ height: 40px; font-size: 0.8rem;}
-    .edit-btn{display: flex; flex-direction: column;}
-    .edit-comment{ width: 100px;}
- }
