--- a/frontend/src/components/profillogged/ProfilLogged.css
+++ b/frontend/src/components/profillogged/ProfilLogged.css
@@ -1,50 +1,66 @@
-.profilLogged-container{
-    display: flex;
-    flex-direction: row;
-    
+.profilLogged-container {
+  display: flex;
+  flex-direction: row;
 }
-.profilForm-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+.profilForm-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
-.titreprofil{
-    
-    font-size: 30px;
+.titreprofil {
+  font-size: 30px;
 }
 
-.profilForm{
-background: #fdeeee ;
-width: 450px;
-height: 700px;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-border-radius: 20px;
-
+.profilForm {
+  background: #fdeeee;
+  width: 450px;
+  height: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
 }
 
-.label{
-  margin-top: 55px;  margin-bottom: 10px;font-size: 30px;
+.label {
+  margin-top: 55px;
+  margin-bottom: 10px;
+  font-size: 30px;
 }
-.infoprofil{ font-size: 30px;margin-bottom: 20px;}
-
-@media screen and (max-width :530px) { 
-.profilForm{width: 250px;}
+.infoprofil {
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
-@media screen and (max-width :380px) { 
-    .profilForm{width: 250px;height: 400px;}
-    
-    .titreprofil{font-size: 20px}
-    .infoprofil{font-size: 20px}
-    .label{font-size: 20px; margin-top: 20px;}
-    }
+@media screen and (max-width: 530px) {
+  .profilForm {
+    width: 250px;
+  }
+}
 
-@media screen and (max-width :333px) { 
-    .profilForm{width: 240px;height: 400px;}
-    
+@media screen and (max-width: 380px) {
+  .profilForm {
+    width: 250px;
+    height: 400px;
+  }
+
+  .titreprofil {
+    font-size: 20px;
+  }
+  .infoprofil {
+    font-size: 20px;
+  }
+  .label {
+    font-size: 20px;
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 333px) {
+  .profilForm {
+    width: 240px;
+    height: 400px;
+  }
 }
