--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,67 +1,87 @@
-.home{display: flex;
-flex-direction: row;background-color: steelblue;}
-.main{ width: 100%;display: flex;
-    flex-direction: column;
-align-items: center;}
+.home {
+  display: flex;
+  flex-direction: row;
+  background-color: steelblue;
+}
+.main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-.post-form-container{
-    border: none;
-    background: #fdeeee;
-    min-width: 690px;
-    text-align: center;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 20px;}
+.post-form-container {
+  border: none;
+  background: #fdeeee;
+  min-width: 690px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 20px;
+}
 
-body{background-color: steelblue;}
+body {
+  background-color: steelblue;
+}
 
 textarea {
-    width: 500px;
-    height: 100px;
-    padding: 14px 20px;
-    margin: 0;
-    font-size: 1.2rem;
-    border-radius: 20px;
-    resize: none;}
-
-
-    @media screen and (max-width :780px) {
-
-        .post-form-container{
-            min-width: 0px;
-        }
-    }
-
-    @media screen and (max-width :680px) { 
-    .post-form-container{
-       width: 350px;
-    }
-    .user_date{ display: block;}
-
-    textarea {width: auto}
-
-    .attachment-picture{ width: auto}
-    #file-upload{ width: 180px}
-
-}
-@media screen and (max-width :569px) { 
-   
-
-    img{ height: auto;}
+  width: 500px;
+  height: 100px;
+  padding: 14px 20px;
+  margin: 0;
+  font-size: 1.2rem;
+  border-radius: 20px;
+  resize: none;
 }
 
-@media screen and (max-width :436px) { 
-    .post-form-container{
-       width: 250px;
-    }
+@media screen and (max-width: 780px) {
+  .post-form-container {
+    min-width: 0px;
+  }
+}
 
+@media screen and (max-width: 680px) {
+  .post-form-container {
+    width: 350px;
+  }
+  .user_date {
+    display: block;
+  }
 
-    textarea {width: 200px}
+  textarea {
+    width: auto;
+  }
 
-    .attachment-picture{ width: auto}
-    #file-upload{ width: 180px}
+  .attachment-picture {
+    width: auto;
+  }
+  #file-upload {
+    width: 180px;
+  }
+}
+@media screen and (max-width: 569px) {
+  img {
+    height: auto;
+  }
+}
 
-    .thread-container{ width: auto;}
+@media screen and (max-width: 436px) {
+  .post-form-container {
+    width: 250px;
+  }
 
-    
+  textarea {
+    width: 200px;
+  }
+
+  .attachment-picture {
+    width: auto;
+  }
+  #file-upload {
+    width: 180px;
+  }
+
+  .thread-container {
+    width: auto;
+  }
 }
