--- a/frontend/src/pages/Profil/Profil.css
+++ b/frontend/src/pages/Profil/Profil.css
@@ -1,26 +1,28 @@
 .profil-page {
-    
-    max-width: 1200px;}
-
-    .log-container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-evenly;margin: 80px auto 0;
-        }
-
-
-
-
-img{
-    max-width: 100%;
-    height:300px
+  max-width: 1200px;
 }
-body{background: white;}
-    
-    @media screen and (max-width :611px) { 
-        .logo-groupo{width: 200px;}
-        .log-container{flex-direction: column;}
-        
-        
-        }
+
+.log-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 80px auto 0;
+}
+
+img {
+  max-width: 100%;
+  height: 300px;
+}
+body {
+  background: white;
+}
+
+@media screen and (max-width: 611px) {
+  .logo-groupo {
+    width: 200px;
+  }
+  .log-container {
+    flex-direction: column;
+  }
+}
